# hello

./: .README.md.swp  README.md  pyproject.toml
src/hello_8trider/: my.py  who.py
tests/: test_my.py  test_who.py
