[project]
name = "hello-8trider"
version = "0.3.1"
description = "My first python publish"
authors = [
    {name = "opeth8", email = "8trider@naver.com"},
]
dependencies = [
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]

[project.scripts]
8pic = 'hello_8trider.my:pic'
8name = 'hello_8trider.who:my_name'
eight = 'hello_8trider.who:eight'
